# dashboard-big-data

./: Cargo.toml  README.md  diesel.toml
frontend_yew/: Cargo.toml
frontend_yew/src/: lib.rs
src/: db.rs  handlers.rs  main.rs  models.rs  schema.rs
static/css/: style.css
static/js/: chart.js
static/pkg/: frontend_yew.d.ts  frontend_yew.js  frontend_yew_bg.wasm  frontend_yew_bg.wasm.d.ts  package.json
templates/: index.html
