[package]
name = "frontend_yew"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
gloo-net = "0.4"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
gloo-utils = "0.2"
gloo-console = "0.3"
